<resources>
    <string name="app_name">IntervalAlarm</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="snooze">Snooze</string>
    <string name="vibrate">Vibrate</string>

    <string name="confirm_button">Confirm</string>
    <string name="dismiss">Dismiss</string>
</resources>
