<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addViewModel"
            type="com.shanemaglangit.intervalalarm.ui.add.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddFragment">

        <ToggleButton
            android:id="@+id/toggle_sun"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="@={addViewModel.sunday}"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_mon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/toggle_mon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="@={addViewModel.monday}"
            android:textOff="@string/monday"
            android:textOn="@string/monday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_sun"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_tue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_sun"
            app:layout_constraintTop_toTopOf="@+id/toggle_sun" />

        <ToggleButton
            android:id="@+id/toggle_tue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="@={addViewModel.tuesday}"
            android:textOff="@string/tuesday"
            android:textOn="@string/tuesday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_mon"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_wed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_mon"
            app:layout_constraintTop_toTopOf="@+id/toggle_mon" />

        <ToggleButton
            android:id="@+id/toggle_wed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="@={addViewModel.wednesday}"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_tue"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_thu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_tue"
            app:layout_constraintTop_toTopOf="@+id/toggle_tue" />

        <ToggleButton
            android:id="@+id/toggle_thu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="@={addViewModel.thursday}"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_wed"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_fri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_wed"
            app:layout_constraintTop_toTopOf="@+id/toggle_wed" />

        <ToggleButton
            android:id="@+id/toggle_fri"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:checked="@={addViewModel.friday}"
            android:textOff="@string/friday"
            android:textOn="@string/friday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_thu"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/toggle_sat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_thu"
            app:layout_constraintTop_toTopOf="@+id/toggle_thu" />

        <ToggleButton
            android:id="@+id/toggle_sat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:checked="@={addViewModel.saturday}"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday"
            android:textSize="@dimen/days_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/toggle_fri"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/toggle_fri"
            app:layout_constraintTop_toTopOf="@+id/toggle_fri" />

        <TextView
            android:id="@+id/text_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="false"
            android:onClick="@{() -> addViewModel.changeStartTime()}"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_sun"
            app:time="@{addViewModel.startTime}"
            tools:text="07 : 30 : 00 PM" />

        <TextView
            android:id="@+id/text_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="false"
            android:onClick="@{() -> addViewModel.changeEndTime()}"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_start"
            app:time="@{addViewModel.endTime}"
            tools:text="07 : 30 : 00 PM" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:max="10"
            android:progress="@={addViewModel.interval}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_end" />

        <Switch
            android:id="@+id/switch_snooze"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={addViewModel.snooze}"
            android:text="@string/snooze"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <Switch
            android:id="@+id/switch_vibrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:text="@string/vibrate"
            android:checked="@={addViewModel.vibrate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_snooze" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_button"
            android:onClick="@{() -> addViewModel.addAlarm()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_vibrate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>